examples/test/testpolicy12568.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12568
  namespace: namespace453
spec:
  podSelector:
    matchLabels:
      key43: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value9
          key47: value37
          key18: value22
      podSelector:
        matchLabels:
          key39: value10
          key45: value1
